adicionei estilização ao html

--- a/semana1/sistema-loja/index.html
+++ b/semana1/sistema-loja/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Street Moda SLZ</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
     <div>
-        <h1>Bem-vind@ a<em> Street Moda SLZ</em>!</h1>
+        <h1>Bem-vind@ a Street Moda SLZ !</h1>
         <p>Sua loja streetwear!</p>
     </div>
 
@@ -20,7 +22,6 @@
     </div>
 
     <div>
-        <!-- ADICIONAR INFORMAÇOES SOBRE SUA LOJINHA -->
         Somos uma loja diferenciada trazendo a tendência streetwear para o Brasil !
     </div>
 
@@ -28,9 +29,9 @@
         <p>Siga-nos nas redes sociais!</p>
 
         <div>
-            <img src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
+            <img src="https://image.flaticon.com/icons/png/512/25/25305.png" class="icon-resize">
+            <img src="https://image.flaticon.com/icons/png/512/25/25425.png" class="icon-resize">
+            <img src="https://image.flaticon.com/icons/png/512/8/8800.png" class="icon-resize">
         </div>
     </div>
 </body>
