--- a/semana1/sistema-loja/ctrl-estoque.html
+++ b/semana1/sistema-loja/ctrl-estoque.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Controle de Estoque</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <div>
@@ -57,12 +59,11 @@
         </tr>
         
         <tr>
-        <td><img src="./img/bone-jordan.jpg" alt="bone-jordan" width="100" height="100"/></td>
-        <td>Boné Nike Jordan</td>
-        <td>129.90</td>
-        <td>7</td>
+            <td><img src="./img/bone-jordan.jpg" alt="bone-jordan" width="100" height="100"/></td>
+            <td>Boné Nike Jordan</td>
+            <td>129.90</td>
+            <td>7</td>
         </tr>
-
     </table>
 
 </body>
