--- a/semana1/sistema-loja/index.html
+++ b/semana1/sistema-loja/index.html
@@ -5,33 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Street Moda SLZ</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <div>
-        <h1>Bem-vind@ a<em> Street Moda SLZ</em>!</h1>
-        <p>Sua loja streetwear!</p>
+    <div class="container">
+      <div class="navbar">
+        <img src="./img/logo-street.png" class="logo">
+        <nav>
+            <ul>
+                <li><a href="index.html">Página Inicial</a></li>
+                <li><a href="ctrl-estoque.html">Controle de Estoque</a></li>
+                <li><a href="add-produto.html">Adicionar Produto</a></li>
+                <li><a href="funcionarios.html">Funcionários</a></li>
+            </ul>
+        </nav>
+        <img src="./img/cart-img.png" class="cart">
+      </div>
     </div>
 
-    <div>
-        <a href="index.html">Página Inicial</a>
-        <a href="ctrl-estoque.html">Controle de Estoque</a>
-        <a href="add-produto.html">Adicionar Produto</a>
-        <a href="funcionarios.html">Funcionários</a>
+    <div class="arrow-icons">
+        <img src="./img/back-arrow.png">
+        <img src="./img/next-arrow.png">
     </div>
 
-    <div>
-        <!-- ADICIONAR INFORMAÇOES SOBRE SUA LOJINHA -->
-        Somos uma loja diferenciada trazendo a tendência streetwear para o Brasil !
+    <div class="content">
+        <a href="" class="btn">Melhores tendências 2020</a>
+        <h1>Melhor do <br>Streetwear Brasil</h1>
+        <p>Novidades somente aqui.</p>
     </div>
 
-    <div>
-        <p>Siga-nos nas redes sociais!</p>
+    <img src="./img/img-outfit.png" class="feature-img">
 
-        <div>
-            <img src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
-        </div>
+    <div class="social-links">
+            <img src="https://www.flaticon.com/svg/static/icons/svg/747/747374.svg">
+            <img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384088.svg">
+            <img src="https://www.flaticon.com/svg/static/icons/svg/87/87390.svg">
     </div>
 </body>
 </html>
