novas alterações nos arquivos index, style

--- a/semana1/portfolio/index.html
+++ b/semana1/portfolio/index.html
@@ -15,16 +15,29 @@
         <h1>Wdson Henrique</h1>
         <p class="about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quo voluptas accusamus similique doloribus architecto.</p>
         <div class="social-links">
-            <a href="github.com/wdsonhenrique"><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111432.svg"></a>
-            <a href="instagram.com/wdsonhenrique_"><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111463.svg"></a>
-            <a href="linkedin.com/in/wdsonhenrique"><img src="https://www.flaticon.com/svg/static/icons/svg/174/174857.svg"></a>
+            <a href="https://github.com/wdsonhenrique" target="_blank">
+                <img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111432.svg">
+            </a>
+            <a href="https://www.instagram.com/wdsonhenrique_" target="_blank">
+                <img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111463.svg">
+            </a>
+            <a href="https://www.linkedin.com/in/wdsonhenrique" target="_blank">
+                <img src="https://www.flaticon.com/svg/static/icons/svg/174/174857.svg">
+            </a>
         </div>
 
-        <h2>Experiência</h2>
+        <h2>Especialista</h2>
+        <div class="expert">
+            <img src="">
+            <p><b>Web Developer Fullstack</b></p>
+            <small>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit tempore nemo beatae assumenda repellat aspernatur autem! Offi.
+            </small> 
+
+        </div>
+
 
     </div>
-
-    
 
 </body>
 </html>
