--- a/semana2/labetube/index.html
+++ b/semana2/labetube/index.html
@@ -48,5 +48,8 @@
         </div>
     </section>
     
+    <footer class="rodape">
+        <p class="info-rodape">Copyright @wdsonhenrique_ 2020/21 Turma: Dumont</p>
+    </footer>
 </body>
 </html>
