Alteração de documento html

--- a/semana2/labetube/index.html
+++ b/semana2/labetube/index.html
@@ -3,53 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Labetube</title>
+    <title>RockTube</title>
     <link href="index.css" rel="stylesheet">
 </head>
 <body>
     <header class="cabecalho">
-        <h1>FutureTube</h1>
+        <h1>RockTube</h1>
 
         <input type="search" placeholder="Busca" id="pesquisar" name="pesquisar">
     </header>
 
     <section class="media-play">
         <div>
-            <img src="https://www.casaortopedica.com.br/data/product/images/4844/10786/thumb.jpg">
-            <p>Media 1</p>
+            <a href="videos.html">
+                <img src="https://studiosol-a.akamaihd.net/letras/272x272/albuns/1/e/3/8/513291466600505.jpg">
+            </a>
+            <p>Video 1</p>
         </div>
         <div>
-            <img src="https://www.casaortopedica.com.br/data/product/images/4844/10786/thumb.jpg">
-            <p>Media 2</p>
+            <img src="https://studiosol-a.akamaihd.net/letras/272x272/albuns/1/e/3/8/513291466600505.jpg">
+            <p>Video 2</p>
         </div>
         <div>
-            <img src="https://www.casaortopedica.com.br/data/product/images/4844/10786/thumb.jpg">
-            <p>Media 3</p>
+            <img src="https://studiosol-a.akamaihd.net/letras/272x272/albuns/1/e/3/8/513291466600505.jpg">
+            <p>Video 3</p>
         </div>
         <div>
-            <img src="https://www.casaortopedica.com.br/data/product/images/4844/10786/thumb.jpg">
-            <p>Media 4</p>
+            <img src="https://studiosol-a.akamaihd.net/letras/272x272/albuns/1/e/3/8/513291466600505.jpg">
+            <p>Video 4</p>
         </div>
         <div>
-            <img src="https://www.casaortopedica.com.br/data/product/images/4844/10786/thumb.jpg">
-            <p>Media 5</p>
+            <img src="https://studiosol-a.akamaihd.net/letras/272x272/albuns/1/e/3/8/513291466600505.jpg">
+            <p>Video 5</p>
         </div>
         <div>
-            <img src="https://www.casaortopedica.com.br/data/product/images/4844/10786/thumb.jpg">
-            <p>Media 6</p>
+            <img src="https://studiosol-a.akamaihd.net/letras/272x272/albuns/1/e/3/8/513291466600505.jpg">
+            <p>Video 6</p>
         </div>
         <div>
-            <img src="https://www.casaortopedica.com.br/data/product/images/4844/10786/thumb.jpg">
-            <p>Media 7</p>
+            <img src="https://studiosol-a.akamaihd.net/letras/272x272/albuns/1/e/3/8/513291466600505.jpg">
+            <p>Video 7</p>
         </div>
         <div>
-            <img src="https://www.casaortopedica.com.br/data/product/images/4844/10786/thumb.jpg">
-            <p>Media 8</p>
+            <img src="https://studiosol-a.akamaihd.net/letras/272x272/albuns/1/e/3/8/513291466600505.jpg">
+            <p>Video 8</p>
         </div>
     </section>
     
     <footer class="rodape">
-        <p class="info-rodape">Copyright @wdsonhenrique_ 2020/21 Turma: Dumont</p>
+        <p class="info-rodape">Copyright @wdsonhenrique_ 2020/21 Turma: Dumont
+        </p>
     </footer>
 </body>
 </html>
