--- a/semana2/labetube/videos.html
+++ b/semana2/labetube/videos.html
@@ -8,18 +8,21 @@
 </head>
 <body>
     <header class="cabecalho">
-        <h1>Video 1</h1>
+        <h1>RockTube</h1>
 
         <input type="search" placeholder="Busca" id="pesquisar" name="pesquisar">
     </header>
 
     <section class="media-play">
         <div>
-            
+            <h3>Veil of Maya</h3>
+
+            <iframe width="480" height="320" src="https://www.youtube.com/embed/u5rt-yIRL50" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            </iframe>
         </div>
     </section>
     
-    <footer class="rodape">
+    <footer class="rodape-video">
         <p class="info-rodape">Copyright @wdsonhenrique_ 2020/21 Turma: Dumont</p>
     </footer>
 </body>
