--- a/semana4/planner/index.html
+++ b/semana4/planner/index.html
@@ -24,7 +24,7 @@
             </select>
         </form>
 
-        <button>Criar tarefa</button>
+        <button onclick="adicionaTarefa()">Criar tarefa</button>
         
     </header>
     <section>
